--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "vscode": "^1.87.0"
   },
+  "repository": "https://github.com/yanquer/vscode-rst-fragment",
   "categories": [
     "Snippets"
   ],
